# incidentops-openenv

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MEMORY.md  README.md  RULES.txt  TROUBLESHOOTING.md  app.py  baseline.py  docker-compose.yml  fix_imports.py  inference.py  metadata.json  openenv.yaml  pyproject.toml  requirements.txt  run.sh  start_dev.py  test_baseline_debug.py  test_browser_errors.js  validate_submission.py
.claude-flow/sessions/: session-1775412897055-e84udo.json
.github/workflows/: ci.yml  deploy.yml
.huggingface/: metadata.json
RULES/: IDEA.txt  Pre-Submission Checklist  — all mus.txt  requirements.txt
app/: __init__.py  action_tracker.py  baseline.py  comprehensive_validation.py  deceptive_signals.py  determinism.py  difficulty_guide.py  enhanced_grader.py  environment.py  fault_injector.py  frontier_task.py  grader.py  human_sre_grader.py  information_tracker.py  llm_baseline.py  main.py  memory.py  models.py  reasoning_reward.py  reward.py  sre_grader.py  validation.py
app/agents/: __init__.py  analyst.py  base.py  coordinator.py  fixer.py  investigator.py
app/db/: __init__.py  database.py  models.py  schemas.py
app/faults/: __init__.py  base.py  cert_expiry.py  config_drift.py  data_corruption.py  ddos.py  injector.py  memory_leak.py  network_partition.py  noise.py  noisy_neighbor.py  registry.py  slow_downstream.py  thundering_herd.py  version_mismatch.py  zombie_process.py
app/routes/: __init__.py  agents.py  auth_deps.py  episodes.py  state.py
app/static/: index.html
dashboard/: debug-blank.mjs  e2e-audit.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docs/: TROUBLESHOOTING.md
docs/adr/: 001-typed-observation-models.md  002-deterministic-environment.md  003-anti-brute-force.md
grafana/: dashboard.json  prometheus.yml
scripts/: deploy_hf.py  load_test.py
server/: app.py
tests/: conftest.py
tests/e2e/: playwright.config.ts  test_dashboard.spec.ts
tests/integration/: test_api.py  test_main_coverage.py  test_main_endpoints.py
tests/unit/: test_action_tracker.py  test_agents.py  test_baseline.py  test_comprehensive_validation.py  test_database_coverage.py  test_deceptive_signals.py  test_determinism.py  test_determinism_coverage.py  test_difficulty_guide.py  test_edge_cases.py  test_enhanced_grader_edge_cases.py  (+27 more)
(+47 files in other folders)
